Fix truncation on post#index
Switched to using the Nokogiri::HTML class (as opposed to the
Nokogiri::XML class) as this will return fragments of a tag instead
stopping at the last closed tag. I expect that this should improve click
rates (but idk).
Have also fixed the styling for code blocks in this view.

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -31,6 +31,10 @@
 article {
   padding-top: 10px;
   border-bottom: 1px $black solid;
+
+  pre {
+    @extend .CodeRay;
+  }
 }
 
 @media screen and (min-width: 0px) and (max-width: 500px){
